add simple query and pagination
